projects/roffit: updates

--- a/projects/roffit/index.html
+++ b/projects/roffit/index.html
@@ -23,14 +23,14 @@
 <p>
  Example conversions (possibly not generated with the latest version):
 <ul>
-<li> the '<a href="http://curl.haxx.se/docs/manpage.html">curl</a>' man page
+<li> the '<a href="https://curl.se/docs/manpage.html">curl</a>' man page
 
-<li> the '<a href="http://curl.haxx.se/libcurl/c/curl_easy_setopt.html">curl_easy_setopt</a>' man page
+<li> the '<a href="https://curl.se/libcurl/c/curl_easy_setopt.html">curl_easy_setopt</a>' man page
 
 </ul>
 <div class=subtitle align=left> Download roffit </div>
 <p>
- Get roffit directly from git, we don't have any recent download archives.
+ Get roffit directly from git, we don't have any proper download archives.
 <div class=subtitle align=left> Bug Reports </div>
 <p>
  We use the <a href="https://github.com/bagder/roffit/issues">github issue
@@ -38,7 +38,7 @@
 tracker</a>
 <div class=subtitle align=left> source code </div>
 <p>
- <a href="http://github.com/bagder/roffit">Browse git</a>
+ <a href="https://github.com/bagder/roffit">Browse git</a>
 
 <p>
  Checkout from git:
@@ -47,7 +47,7 @@ tracker</a>
 
 </pre>
 <p>
- See further on <a href="http://github.com/bagder/roffit">github</a>.
+ See further on <a href="https://github.com/bagder/roffit">github</a>.
 
 <div class=subtitle align=left> Changelog </div>
 <p>
