css: use padding instead of pipes in top menu

--- a/old-photos/index.html
+++ b/old-photos/index.html
@@ -8,15 +8,15 @@
 </head>
 <body bgcolor="#ffffff" text="#000040">
 <div class="topmenu">
-<a href="/">front</a> |
-<a href="/blog/">blog</a> |
-<a href="/talks.html">talks</a> |
-<a href="/videos/">videos</a> |
-<a href="/docs/">docs</a> |
-<a href="/photos.html">photos</a> |
-<a href="/podcasts.html">podcasts</a> |
-<a href="/address.html">contact</a> |
-<a href="/about.html">about me</a>
+<a class="topmenu" href="/">front</a>
+<a class="topmenu" href="/blog/">blog</a>
+<a class="topmenu" href="/talks.html">talks</a>
+<a class="topmenu" href="/videos/">videos</a>
+<a class="topmenu" href="/docs/">docs</a>
+<a class="topmenu" href="/photos.html">photos</a>
+<a class="topmenu" href="/podcasts.html">podcasts</a>
+<a class="topmenu" href="/address.html">contact</a>
+<a class="topmenu" href="/about.html">about me</a>
 </div>
 <div class="main">
 <p>
